assets/css/style.css
/*Added custom css to resolve color issue with navbar */
.navbar {
  color: #59310e;
  background-color: #4480a6;
}

.intro-2 {
  background: url('../images/coffeecakebook.jpg') no-repeat center center;
  background-size: cover;
}

.dropdown-menu {
  background-color: #d0e2f2;
}

.dropdown-item {
  color: #4480a6;
}

.white-text {
  text-align: justify !important;
  color: #d0e2f2 !important;
  text-shadow: 2px 2px 3px #000000 !important;
}

li {
  font-size: 20px !important;
}

html,
body,
header,
.view {
  height: 100%;
}

